
bazel_dep(name = "aspect_rules_js", version = "2.4.0", dev_dependency = True)
bazel_dep(name = "rules_nodejs", version = "6.3.0", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "2.14.0", dev_dependency = True)
bazel_dep(name = "platforms", version = "0.0.11", dev_dependency = True)


node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "18.19.1") # Specify your desired Node.js version

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    data = ["//frontend:package.json"],
    pnpm_lock = "//frontend:pnpm-lock.yaml",
    verify_node_modules_ignored = "//frontend:.bazelignore",

)

use_repo(npm, "npm")



bazel_dep(name = "container_structure_test", version = "1.16.0", dev_dependency = True)
bazel_dep(name = "rules_oci", version = "2.0.0-alpha2", dev_dependency = True)


oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "nginx",
    image = "docker.io/library/nginx",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "1.29.0-alpine-slim",
)

use_repo(oci, "nginx")
